objects/Certification__c.object
<CustomObject>
    <description>Certification tracking for advisor recruits.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Certified_Id__c</fullName>
        <externalId>true</externalId>
        <label>SalesLogixCertifiedId</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Certification</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Certification #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>